<resources>
    <string name="app_name">Is My Data Secure</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="emailDefault">Enter Email Address</string>
    <string name="search">Search</string>
    <string name="passwordDefault">Enter Password</string>
    <string name="mnemonic">Check Password</string>
    <string name="tab_text_1">Check</string>
    <string name="tab_text_2">Home</string>
    <string name="title_activity_search">Search</string>
    <string name="logo">Logo</string>
    <string name="secure">Secure</string>
    <string name="dots">...</string>
    <string name="arrow"><![CDATA[>]]></string>
    <string name="help">Help</string>
    <string name="leakednone">Leaked Online: 0</string>
    <string name="weak">Weak</string>
    <string name="medium">Medium</string>
    <string name="strong">Strong</string>
    <string name="very_strong">Very Strong</string>
    <string name="third_fragment_label">Third Fragment</string>
</resources>