<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:tag="first"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/emailDefault"
            android:inputType="textEmailAddress"
            android:lines="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/button_first"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/round_button"
            android:text="@string/arrow"
            android:textSize="25sp"
            android:textColor="#fff"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/emailInput"
            app:layout_constraintLeft_toRightOf="@id/emailInput"

            app:layout_constraintStart_toEndOf="@+id/emailInput"
            app:layout_constraintTop_toTopOf="@+id/emailInput" />




        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/help_button" />

        <TextView
            android:id="@+id/result_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/dots"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_first" />

        <Button
            android:id="@+id/share"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/result"
            android:background="@drawable/ic_share"
            app:layout_constraintEnd_toEndOf="parent" />



        <Button
            android:id="@+id/help_emailInput"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/help"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/help_button"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:text="@string/secure"
            app:layout_constraintBottom_toTopOf="@id/result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result_warning" />

        <Button
            android:id="@+id/new_button"
            android:visibility="gone"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_baseline_refresh_24"
            app:layout_constraintBottom_toTopOf="@id/result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result_warning" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>